# motorControl

./: .cproject  .gitignore  .project  README.md  TPO.umf
.mcuxpressoide_packages_support/: info.properties
GUI_qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
PROYECTO/: CMakeLists.txt  CMakeLists.txt.user.2bbd938  i2cCom.cpp  i2cCom.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc_TPO/: indexDoc.html
drivers/: AnalogInput.cpp  AnalogInput.h  DigitalInput.cpp  DigitalInput.h  LcdI2C.cpp  LcdI2C.h  PerifericoTemporizado.cpp  PerifericoTemporizado.h  PinInt.h  PintInt.cpp  Temperatura.cpp  Temperatura.h  Timer.cpp  Timer.h  bufferCirc.cpp  bufferCirc.h  detectorGiro.cpp  detectorGiro.h  displayLCD.cpp  displayLCD.h  driverMotor.cpp  driverMotor.h  gpio.cpp  gpio.h  i2cCom.cpp  i2cCom.h  serialCom.cpp  serialCom.h
firmware/: Init.cpp  Init.h  LPC845.h  Systick.cpp  Systick.h
src/: ADC.cpp  MdEMotor.cpp  MdEMotor.h  MdEWifi.cpp  MdEWifi.h  StringFormatter.cpp  StringFormatter.h  Wifi.cpp  Wifi.h  motorControl.cpp
